XXXX-YY-ZZ	0.0.4	- Minor bugs fixed
			- sioc:Site class added
			- SIOC generator independence in Buxon
			- Cache dump added

2006-11-01	0.0.3	- Buxon, a sioc:Forum visor written in PyGTK, added

2006-10-13	0.0.2	- New configuration method based in INI files
			- New scripts to add FOAF and KML independent support of main script

2006-10-02	0.0.1	- First release