@@ -19,12 +19,13 @@
 """Software to enrich SWAML's subscribers using FOAF"""
 
 import sys, os, string
+from classes.ui import CommandLineUI
 import rdflib
 from rdflib import sparql, BNode, Literal, URIRef
 from classes.namespaces import SWAML, SIOC, RDF, FOAF, GEO, RDFS
 from classes.services import FoafUtils
 
-class SwamlFoafEnricher:
+class SwamlFoafEnricher(CommandLineUI):
     """
     SWAML's subscribers enricher with FOAF
     
@@ -110,34 +111,13 @@ class SwamlFoafEnricher:
         else:
             print input, 'is already enriched with FOAF'
         
-
-    def usage(self):
-        """
-        Print help to use SWAML's FOAF enricher
-        """
-        
-        print """
-Usage: foaf.py subscribers-rdf-input [subscribers-rdf-output]
-        
-enriches subscribers RDF file using related FOAF files
-
-   subscribers-rdf-input  : path to a subscribers.rdf generated by swaml
-   subscribers-rdf-output : path to output enriched file
-
-Options:
-   -h, --help           : print this help message and exit.
-
-Report bugs to: <http://swaml.berlios.de/bugs>
-
-"""
-        sys.exit()
-        
-
     def __init__(self, argv):
         """
         main method
         @param argv: values of inline arguments
         """       
+        
+        CommandLineUI.__init__(self, 'foaf')
         
         for arg in argv:
             if arg == "-h" or arg == "--help":
