@@ -1,0 +1,13 @@
+
+Usage: foaf.py subscribers-rdf-input [subscribers-rdf-output]
+        
+enriches subscribers RDF file using related FOAF files
+
+   subscribers-rdf-input  : path to a subscribers.rdf generated by swaml
+   subscribers-rdf-output : path to output enriched file
+
+Options:
+   -h, --help           : print this help message and exit.
+
+Report bugs to: <http://swaml.berlios.de/bugs>
+
