@@ -1,0 +1,13 @@
+
+Usage: kml.py subscribers-rdf-file [output-kml-file]
+        
+export geographic information about SWAML's subscribers, described in RDF, into KML
+
+   subscribers-rdf-file : path to a subscribers.rdf generated by swaml
+   output-kml-file      : path to output KML file, optional argument
+
+Options:
+   -h, --help           : print this help message and exit.
+
+Report bugs to: <http://swaml.berlios.de/bugs>
+
