@@ -1,0 +1,14 @@
+
+Usage: swaml.py configfile [options]
+        
+'swaml' transform the archives of a mailing list (in mbox format) into a semantic web friendly format (RDF in XML).
+
+   'configfile'      : path to a configuration file compatible with RFC822.
+
+Options:
+   -v, --verbose     : turn on verbose mode.
+   -V, --version     : show version.
+   -h, --help        : print this help message and exit.
+
+Report bugs to: <http://swaml.berlios.de/bugs>
+
