@@ -19,12 +19,13 @@
 """Software to export SWAML's subscribers into KML"""
 
 import sys, os, string
+from classes.ui import CommandLineUI
 import rdflib
 from rdflib import sparql
 from classes.namespaces import SWAML, SIOC, RDF, FOAF, GEO
 from classes.kml import KML
 
-class SwamlKmlExporter:
+class SwamlKmlExporter(CommandLineUI):
     """
     SWAML's subscribers exporter into KML
     
@@ -75,35 +76,14 @@ class SwamlKmlExporter:
                 
         else:
             print 'Nobody with geographic information available in', input
-        
-
-    def usage(self):
-        """
-        Print help to use SWAML KML
-        """
-        
-        print """
-Usage: kml.py subscribers-rdf-file [output-kml-file]
-        
-export geographic information about SWAML's subscribers, described in RDF, into KML
-
-   subscribers-rdf-file : path to a subscribers.rdf generated by swaml
-   output-kml-file      : path to output KML file, optional argument
-
-Options:
-   -h, --help           : print this help message and exit.
-
-Report bugs to: <http://swaml.berlios.de/bugs>
-
-"""
-        sys.exit()
-        
 
     def __init__(self, argv):
         """
         main method
         @param argv: values of inline arguments
         """       
+        
+        CommandLineUI.__init__(self, 'kml')
         
         for arg in argv:
             if arg == "-h" or arg == "--help":
